--- a/index.html
+++ b/index.html
@@ -9,7 +9,29 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    
+    <div class="flex-container">
+        <div class="first-item">
+            <div class="profile">
+                <img src="assets/img/profile.jpg" alt="">
+                <div class="profile-text">
+                    <h2>Maria</h2>
+                    <h6>Activa ahora</h6>
+                </div>
+                <div class="profile-icons">
+                    <i class="fa-regular fa-message"></i>
+                    <i class="fa-solid fa-bars"></i>
+                </div>
+            </div>
+            <div class="btn-container">
+                <div class="btn">
+                    <a href="#">Nuevo Chat</a>
+                </div>
+            </div>
+        </div>
+        <div class="second-item">
+
+        </div>
+    </div>
 
     <!-- FontAwesome -->
     <script src="https://kit.fontawesome.com/f0272e1096.js" crossorigin="anonymous"></script>
