--- a/index.html
+++ b/index.html
@@ -27,6 +27,62 @@
                     <a href="#">Nuevo Chat</a>
                 </div>
             </div>
+            <div class="chat-container">
+                <img src="assets/img/img1.jpg" alt="">
+                <div class="chat-text">
+                    <h2>Juanita</h2>
+                    <h3>Lorem ipsum dolor sit amet</h3>
+                </div>
+            </div>
+            <div class="chat-container">
+                <img src="assets/img/img2.jpg" alt="">
+                <div class="chat-text">
+                    <h2>Juanita</h2>
+                    <h3>Lorem ipsum dolor sit amet</h3>
+                </div>
+            </div>
+            <div class="chat-container">
+                <img src="assets/img/img3.jpg" alt="">
+                <div class="chat-text">
+                    <h2>Juanita</h2>
+                    <h3>Lorem ipsum dolor sit amet</h3>
+                </div>
+            </div>
+            <div class="chat-container">
+                <img src="assets/img/img4.jpg" alt="">
+                <div class="chat-text">
+                    <h2>Juanita</h2>
+                    <h3>Lorem ipsum dolor sit amet</h3>
+                </div>
+            </div>
+            <div class="chat-container">
+                <img src="assets/img/img5.jpg" alt="">
+                <div class="chat-text">
+                    <h2>Juanita</h2>
+                    <h3>Lorem ipsum dolor sit amet</h3>
+                </div>
+            </div>
+            <div class="chat-container">
+                <img src="assets/img/img6.jpg" alt="">
+                <div class="chat-text">
+                    <h2>Juanita</h2>
+                    <h3>Lorem ipsum dolor sit amet</h3>
+                </div>
+            </div>
+            <div class="chat-container">
+                <img src="assets/img/img7.jpg" alt="">
+                <div class="chat-text">
+                    <h2>Juanita</h2>
+                    <h3>Lorem ipsum dolor sit amet</h3>
+                </div>
+            </div>
+            <div class="chat-container">
+                <img src="assets/img/img8.jpg" alt="">
+                <div class="chat-text">
+                    <h2>Juanita</h2>
+                    <h3>Lorem ipsum dolor sit amet</h3>
+                </div>
+            </div>
         </div>
         <div class="second-item">
 
