--- a/index.html
+++ b/index.html
@@ -37,55 +37,59 @@
             <div class="chat-container">
                 <img src="assets/img/img2.jpg" alt="">
                 <div class="chat-text">
-                    <h2>Juanita</h2>
+                    <h2>Alberto</h2>
                     <h3>Lorem ipsum dolor sit amet</h3>
                 </div>
             </div>
             <div class="chat-container">
                 <img src="assets/img/img3.jpg" alt="">
                 <div class="chat-text">
-                    <h2>Juanita</h2>
+                    <h2>Ignacio</h2>
                     <h3>Lorem ipsum dolor sit amet</h3>
                 </div>
             </div>
             <div class="chat-container">
                 <img src="assets/img/img4.jpg" alt="">
                 <div class="chat-text">
-                    <h2>Juanita</h2>
+                    <h2>Cristian</h2>
                     <h3>Lorem ipsum dolor sit amet</h3>
                 </div>
             </div>
             <div class="chat-container">
                 <img src="assets/img/img5.jpg" alt="">
                 <div class="chat-text">
-                    <h2>Juanita</h2>
+                    <h2>María José</h2>
                     <h3>Lorem ipsum dolor sit amet</h3>
                 </div>
             </div>
             <div class="chat-container">
                 <img src="assets/img/img6.jpg" alt="">
                 <div class="chat-text">
-                    <h2>Juanita</h2>
+                    <h2>Gonzalo</h2>
                     <h3>Lorem ipsum dolor sit amet</h3>
                 </div>
             </div>
             <div class="chat-container">
                 <img src="assets/img/img7.jpg" alt="">
                 <div class="chat-text">
-                    <h2>Juanita</h2>
+                    <h2>Juan Pablo</h2>
                     <h3>Lorem ipsum dolor sit amet</h3>
                 </div>
             </div>
             <div class="chat-container">
                 <img src="assets/img/img8.jpg" alt="">
                 <div class="chat-text">
-                    <h2>Juanita</h2>
+                    <h2>Magdalena</h2>
                     <h3>Lorem ipsum dolor sit amet</h3>
                 </div>
             </div>
         </div>
         <div class="second-item">
-
+            <div class="content">
+                <img src="assets/img/hand.png" alt="">
+            </div>
+            <h1>Comienza el Networking</h1>
+            <p>Presiona el botón <span class="bold">“Nuevo chat” </span>para comenzar a crear nuevas <br> redes de contacto para tu empresa o emprendimiento.</p>
         </div>
     </div>
 
